Added stylesheets for individual divs

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -9,6 +9,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+
+    <link href="~/Content/Stylesheets/intro.css" rel="stylesheet" />
+    <link href="~/Content/Stylesheets/about.css" rel="stylesheet" />
+    <link href="~/Content/Stylesheets/projects.css" rel="stylesheet" />
+    <link href="~/Content/Stylesheets/members.css" rel="stylesheet" />
+    <link href="~/Content/Stylesheets/footer.css" rel="stylesheet" />
 </head>
 <body>
     <div name="intro"> 
