Added member images

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 
+    <link href="~/Content/Stylesheets/global.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/intro.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/about.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/projects.css" rel="stylesheet" />
@@ -24,6 +25,28 @@
     <div name="projects">
     </div>
     <div name="members">
+        <div class="members-container">
+            <div class="member-content">
+                <div class="member-image">
+                    <img src="~/Content/Images/lina.JPG" />
+                </div>
+            </div>
+            <div class="member-content">
+                <div class="member-image">
+                    <img src="~/Content/Images/lina.JPG" />
+                </div>
+            </div>
+            <div class="member-content">
+                <div class="member-image">
+                    <img src="~/Content/Images/lina.JPG" />
+                </div>
+            </div>
+            <div class="member-content">
+                <div class="member-image">
+                    <img src="~/Content/Images/lina.JPG" />
+                </div>
+            </div>
+        </div>
     </div>
     <div name="footer">
     </div>
