--- a/Teamsite/Teamsite/Content/Stylesheets/members.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/members.css
@@ -1,2 +1,42 @@
-﻿body {
+﻿.members-container {
+    max-width: 1280px;
+    overflow: auto;
+
+    margin: 0 auto;
+}
+
+.member-content {
+    float: left;
+
+    margin: 20px;
+    width: 280px;
+    overflow: auto;
+}
+
+.member-image {
+    margin: 0 auto;
+
+    width: 150px;
+    overflow: auto;
+}
+.member-content img {
+    margin: 0 auto;
+
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+
+    border-radius: 360px;
+}
+
+@media screen and (max-width: 639px) {
+    .members-container {
+        max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 1280px) and (min-width: 640px) {
+    .members-container {
+        max-width: 640px;
+    }
 }
