--- a/Teamsite/Teamsite/Content/Stylesheets/global.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/global.css
@@ -2,3 +2,17 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+/* Colors */
+
+.primary-text {
+
+}
+.secondary {
+    color: rgba(0, 0, 0, 0.87);
+}
