--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 
 <html>
 <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 
@@ -28,23 +29,27 @@
         <div class="members-container">
             <div class="member-content">
                 <div class="member-image">
-                    <img src="~/Content/Images/lina.JPG" />
+                    <img src="~/Content/Images/lina.JPG" style="margin: -15px 0 0 0;"/>
                 </div>
+                <h3 class="secondary">lina hanner sánchez</h3>
             </div>
             <div class="member-content">
                 <div class="member-image">
                     <img src="~/Content/Images/lina.JPG" />
                 </div>
+                <h3 class="secondary">lina hanner sánchez</h3>
             </div>
             <div class="member-content">
                 <div class="member-image">
                     <img src="~/Content/Images/lina.JPG" />
                 </div>
+                <h3 class="secondary">lina hanner sánchez</h3>
             </div>
             <div class="member-content">
                 <div class="member-image">
                     <img src="~/Content/Images/lina.JPG" />
                 </div>
+                <h3 class="secondary">lina hanner sánchez</h3>
             </div>
         </div>
     </div>
