--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -9,17 +9,22 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
 
+    <title>washbears</title>
+
+    <!-- Stylesheets -->
     <link href="~/Content/Stylesheets/global.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/intro.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/about.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/projects.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/members.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/footer.css" rel="stylesheet" />
+
+    <!-- Font Awesome -->
+    <link href="~/Content/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div name="intro"> 
+    <div name="intro">
     </div>
     <div name="about">
     </div>
@@ -27,29 +32,38 @@
     </div>
     <div name="members">
         <div class="members-container">
+            <h2>members</h2>
             <div class="member-content">
                 <div class="member-image">
-                    <img src="~/Content/Images/lina.JPG" style="margin: -15px 0 0 0;"/>
+                    <img src="~/Content/Images/lina.JPG" />
                 </div>
-                <h3 class="secondary">lina hanner sánchez</h3>
+                <h3>linus alpsten</h3>
+                <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
+                <a href="https://github.com/linusalpsten" class="secondary"><i class="fa fa-3x fa-github"></i></a>
             </div>
             <div class="member-content">
                 <div class="member-image">
                     <img src="~/Content/Images/lina.JPG" />
                 </div>
-                <h3 class="secondary">lina hanner sánchez</h3>
+                <h3>daniel eriksson</h3>
+                <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
+                <a href="https://github.com/DanielT4" class="secondary"><i class="fa fa-3x fa-github"></i></a>
+            </div>
+            <div class="member-content">
+                <div class="member-image">
+                    <img src="~/Content/Images/lina.JPG" style="margin: -15px 0 0 0;" />
+                </div>
+                <h3>lina hanner sánchez</h3>
+                <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
+                <a href="https://github.com/lina-hs" class="secondary"><i class="fa fa-3x fa-github"></i></a>
             </div>
             <div class="member-content">
                 <div class="member-image">
                     <img src="~/Content/Images/lina.JPG" />
                 </div>
-                <h3 class="secondary">lina hanner sánchez</h3>
-            </div>
-            <div class="member-content">
-                <div class="member-image">
-                    <img src="~/Content/Images/lina.JPG" />
-                </div>
-                <h3 class="secondary">lina hanner sánchez</h3>
+                <h3>linus skagerberg</h3>
+                <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
+                <a href="https://github.com/Girtouh" class="secondary"><i class="fa fa-3x fa-github"></i></a>
             </div>
         </div>
     </div>
