--- a/Teamsite/Teamsite/Content/Stylesheets/global.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/global.css
@@ -13,6 +13,13 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: lowercase;
 }
 
+h2 {
+    margin: 20px 0;
+}
+h3 {
+    margin-bottom: 10px;
+}
+
 /* Colors */
 
 a {
@@ -27,4 +34,15 @@ a.secondary {
 }
 .secondary {
     color: rgba(0, 0, 0, 0.54);
+}
+
+.bg-orange {
+    background-color: orange;
+}
+
+.left {
+    float: left;
+}
+.right {
+    float: right;
 }
