--- a/Teamsite/Teamsite/Content/Stylesheets/about.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/about.css
@@ -3,13 +3,16 @@
     margin-left:230px;
     margin-right:230px;
 
+    font-size:150%;
     text-align:center;
     margin-bottom:40px;
+
 }
 .about-content{
     text-align:center;
-    font-size: 20px;
+    font-size:inherit;
 
+    color:slategray;
     overflow:auto;
 }
 @media screen and (max-width:639px){
