--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -27,6 +27,14 @@
     <div name="intro">
     </div>
     <div name="about">
+        <div class="about-container">
+            <h2>Om washbears</h2>
+            <div class="about-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id pellentesque metus, in ultricies nibh. Morbi quis felis sit amet dui fringilla consectetur id vel elit. Nulla facilisi. Vivamus felis tellus, finibus vel mi at, lobortis lobortis mi. Cras vestibulum dictum facilisis. Sed eu venenatis est. Integer eu nisi vitae purus lacinia imperdiet.
+                </p>
+            </div>
+        </div>
     </div>
     <div name="projects">
     </div>
