--- a/Teamsite/Teamsite/Content/Stylesheets/intro.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/intro.css
@@ -1,2 +1,42 @@
 ﻿body {
 }
+
+.intro-background{
+    width: 100%;
+    height: 100vh;
+
+    background: url('../Images/IMG_20170131_100807.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.intro-content {
+    overflow: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: rgba(255, 255, 255, 1);
+    font-size: 50px;
+    /*text-shadow: 0 0 10px rgba(255, 255, 255, 1);*/
+
+    height: 100vh;
+    width: 100%;
+
+    background-color: rgba(0,0,0,0.5);
+}
+
+.intro-header {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 500px;
+
+    text-align: center;
+}
+.intro-header i {
+    color: rgba(255, 255, 255, 0.7);
+}
