--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -18,7 +18,19 @@
     <link href="~/Content/Stylesheets/footer.css" rel="stylesheet" />
 </head>
 <body>
-    <div name="intro"> 
+    <div name="intro">
+        <div class="intro-container">
+            <img class="intro-background"/>
+            <div class="intro-content">
+                <div class="intro-header">
+                    <h2>washbears</h2>
+                    <i>software developers</i>
+                </div>
+            </div>
+        </div>
+         
+        
+
     </div>
     <div name="about">
     </div>
