--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -12,6 +12,8 @@
 
     <title>washbears</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     <!-- Stylesheets -->
     <link href="~/Content/Stylesheets/global.css" rel="stylesheet" />
     <link href="~/Content/Stylesheets/intro.css" rel="stylesheet" />
