Added footer + added spacing inbetween views

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -101,6 +101,19 @@
         </div>
     </div>
     <div name="footer">
+        <div class="footer-background">
+            <div class="footer-container">
+                <div class="column-left">
+                    <p>Kontakta oss</p>
+                    <p>+46 (0) 73-562 07 70</p>
+                    <p>lina.hannersanchez@gmail.com</p>
+                    <p>Kvartettvägen 2-6, 142 63 Trångsund</p>
+                </div>
+                <div class="column-right">
+                    <a href="https://github.com/washbears" class="secondary"><i class="fa fa-5x fa-github"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
