--- a/Teamsite/Teamsite/Content/Stylesheets/footer.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/footer.css
@@ -1,1 +1,55 @@
 ﻿
+.footer-background{
+    width: 100%;
+    background-color: rgb(25, 25, 25);
+    padding: 30px 0;
+    overflow: auto;
+}
+
+.footer-container{
+    margin-top: 10vh;
+    margin: auto;
+    width: 75vw;
+    height: 100%;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.footer-container p{
+    margin: 8px 0 8px 0;
+}
+
+.footer-container a.secondary {
+    color: rgba(255, 255, 255, 0.7);
+}
+.footer-container a.secondary:hover {
+    color: white;
+}
+
+.fa-huge{
+    font-size: 100px;
+}
+
+.column-left{
+    width: 60%;
+    float: left;
+    text-align: left;
+}
+
+@media screen and (max-width: 639px){
+    .column-left{
+        width: 100%;
+        text-align: center;
+    }
+}
+
+.column-right{
+    width: 40%;
+    float: left;
+    text-align: center;
+}
+
+@media screen and (max-width: 639px){
+    .column-right{
+        width: 100%;
+    }
+}
