--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
             </div>
             <div class="member-content">
                 <div class="member-image">
-                    <img src="~/Content/Images/lina.JPG" />
+                    <img src="~/Content/Images/daniel.JPG" />
                 </div>
                 <h3>daniel eriksson</h3>
                 <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
@@ -92,7 +92,7 @@
             </div>
             <div class="member-content">
                 <div class="member-image">
-                    <img src="~/Content/Images/lina.JPG" />
+                    <img src="~/Content/Images/linusS.JPG" />
                 </div>
                 <h3>linus skagerberg</h3>
                 <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
