Included alpstens image

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
             <h2>members</h2>
             <div class="member-content">
                 <div class="member-image">
-                    <img src="~/Content/Images/lina.JPG" />
+                    <img src="~/Content/Images/alpsten.JPG" style="margin: -40px 0 0 0;" />
                 </div>
                 <h3>linus alpsten</h3>
                 <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
