--- a/Teamsite/Teamsite/Content/Stylesheets/about.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/about.css
@@ -2,10 +2,10 @@
     margin: 0 auto;
 
     text-align: center;
-    margin-bottom: 20px;
+    margin: 0 auto;
 
-    max-width: 1280px;
-    padding: 60px 20px 0 20px;
+    max-width: 600px;
+    padding: 20px;
 }
 
 .about-content{
