--- a/Teamsite/Teamsite/Content/Stylesheets/members.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/members.css
@@ -1,5 +1,5 @@
 ﻿.members-container {
-    max-width: 1280px;
+    width: 1280px;
     overflow: auto;
 
     margin: 0 auto;
@@ -25,7 +25,7 @@
 .member-content {
     float: left;
 
-    margin: 20px;
+    padding: 20px;
     width: 280px;
     overflow: auto;
 }
@@ -48,12 +48,12 @@
 
 @media screen and (max-width: 639px) {
     .members-container {
-        max-width: 320px;
+        width: 320px;
     }
 }
 
 @media screen and (max-width: 1280px) and (min-width: 640px) {
     .members-container {
-        max-width: 640px;
+        width: 640px;
     }
 }
