Added link to Linas website

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
                     <img src="~/Content/Images/lina.JPG" style="margin: -15px 0 0 0;" />
                 </div>
                 <h3>lina hanner sánchez</h3>
-                <a href="" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
+                <a href="https://linahs.azurewebsites.net" class="secondary"><i class="fa fa-3x fa-globe"></i></a>
                 <a href="https://github.com/lina-hs" class="secondary"><i class="fa fa-3x fa-github"></i></a>
             </div>
             <div class="member-content">
