--- a/Teamsite/Teamsite/Content/Stylesheets/intro.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/intro.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
 
-    background: url('../Images/IMG_20170131_100807.jpg') no-repeat center center fixed; 
+    background: url('../Images/workplace_pic.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
