Edited the about text

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -42,9 +42,11 @@
     </div>
     <div name="about">
         <div class="about-container">
-            <h2>om washbears</h2>
+            <h2>om oss</h2>
             <div class="about-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id pellentesque metus, in ultricies nibh. Morbi quis felis sit amet dui fringilla consectetur id vel elit. Nulla facilisi. Vivamus felis tellus, finibus vel mi at, lobortis lobortis mi. Cras vestibulum dictum facilisis. Sed eu venenatis est. Integer eu nisi vitae purus lacinia imperdiet.</p>
+                <p>Vi vill främja ett agilt tankesätt och goda vanor hos våra utvecklare.</p>
+                <p>För att åstadkomma detta arbetar vi med transparans och iterativa metoder gentemot kunden och ser till att vår kod hålls väl dokumenterad, versionshanteras och genomgår tester innan deployment.</p>
+                <p>Resultatet blir mjukvara som tillfredställer kunden både visuellt och funktionellt.</p>
             </div>
         </div>
     </div>
