--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -56,7 +56,11 @@
             <div class="project-content bg-orange">
                 <div class="project-text left">
                     <h3>PPAdministration</h3>
-                    <p class="secondary">Ett CRM-verktyg byggt för Östra Gymnasiet för att hantera praktikplatser för sina elever.</p>
+                    <p>Ett CRM-verktyg byggt för Östra Gymnasiet för att hantera praktikplatser för sina elever.</p>
+                    <p class="secondary">Projektet pågick i tre veckor därav vi arbetade i 1-veckas iterationer. Inför varje vecka diskuterade vi med produktägarens vision och önskemål, vi avgjorde ett scope avsett för det vi trodde oss klara av inför veckan och sedan presenterade vi en demo-variant vid veckans slut. Produktägaren hade alltid tillgång till den förra veckans demo-varianten och hade möjlighet att testa, kommentera och komma med nya önskemål angående användarvänligheten.</p>
+                    <p class="secondary"><span class="primary">Framework:</span> .NET MVC, Bootstrap
+                    <br /><span class="primary">Versionshantering:</span> VSTS Git
+                    <br /><span class="primary">Kommunikationsverktyg:</span> Slack, VSTS Kanban</p>
                     <a href="http://ostra-ppa.azurewebsites.net/" class="secondary"><i class="fa fa-2x fa-globe"></i></a>
                 </div>
                 <div class="project-image right">
