--- a/Teamsite/Teamsite/Content/Stylesheets/intro.css
+++ b/Teamsite/Teamsite/Content/Stylesheets/intro.css
@@ -26,6 +26,16 @@
     background-color: rgba(0,0,0,0.5);
 }
 
+@media screen and (max-width: 639px){
+    .intro-content{
+        font-size: 30px;
+    }
+
+    .intro-header {
+        width: 320px;
+    }
+}
+
 .intro-header {
     position: relative;
     top: 50%;
