Changed title language

--- a/Teamsite/Teamsite/Views/Home/Index.cshtml
+++ b/Teamsite/Teamsite/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
     </div>
     <div name="projects" class="projects">
         <div class="projects-container">
-            <h2>projects</h2>
+            <h2>projekt</h2>
             <div class="project-content bg-orange">
                 <div class="project-text left">
                     <h3>PPAdministration</h3>
@@ -71,7 +71,7 @@
     </div>
     <div name="members">
         <div class="members-container">
-            <h2>members</h2>
+            <h2>medlemmar</h2>
             <div class="member-content">
                 <div class="member-image">
                     <img src="~/Content/Images/alpsten.JPG" style="margin: -40px 0 0 0;" />
